Implement main activity UI

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/enter_background">
+
+    <ImageView
+        android:id="@+id/main_title"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:src="@drawable/game_title" />
+
 
     <TextView
+        android:id="@+id/main_tv_start"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="60dp"
+        android:layout_above="@+id/main_tv_ranking_list"
+        android:layout_alignParentStart="true"
         android:gravity="center"
         android:onClick="start"
-        android:text="@string/start" />
+        android:text="@string/play"
+        android:textColor="@color/colorAccent"
+        android:textSize="30sp" />
+
+    <TextView
+        android:id="@+id/main_tv_ranking_list"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_above="@id/main_tv_settings"
+        android:gravity="center"
+        android:onClick="rank"
+        android:text="@string/rank_list"
+        android:textColor="@color/colorAccent"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/main_tv_settings"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="80dp"
+        android:gravity="center"
+        android:onClick="settings"
+        android:text="@string/settings"
+        android:textColor="@color/colorAccent"
+        android:textSize="16sp" />
+
 
 </RelativeLayout>
