--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#9ee6e5</color>
     <color name="colorPrimaryDark">#4eb0bf</color>
     <color name="colorAccent">#eeeedb</color>
+    <color name="grade">#5c5a7a</color>
 </resources>
