--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#4eb0bf</color>
     <color name="colorAccent">#eeeedb</color>
     <color name="grade">#5c5a7a</color>
+    <color name="ss">#5c5a7a</color>
 </resources>
