--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#9ee6e5</color>
     <color name="colorPrimaryDark">#4eb0bf</color>
-    <color name="colorAccent">#eeeedb</color>
+    <color name="colorAccent">#004076</color>
     <color name="grade">#5c5a7a</color>
     <color name="ss">#5c5a7a</color>
 </resources>
