--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:gravity="center"
         android:onClick="start"
         android:text="@string/play"
-        android:textColor="@color/colorAccent"
+        android:textColor="#eeeedb"
         android:textSize="30sp" />
 
     <TextView
@@ -33,7 +33,7 @@
         android:gravity="center"
         android:onClick="rank"
         android:text="@string/rank_list"
-        android:textColor="@color/colorAccent"
+        android:textColor="#eeeedb"
         android:textSize="16sp" />
 
     <TextView
@@ -45,7 +45,7 @@
         android:gravity="center"
         android:onClick="settings"
         android:text="@string/settings"
-        android:textColor="@color/colorAccent"
+        android:textColor="#eeeedb"
         android:textSize="16sp" />
 
 
